@startuml



  namespace de.gematik.ti.epa.android.fdv.service.localization {
    abstract class de.gematik.ti.epa.android.fdv.service.localization.AbstractServiceLocator {
        {static} - PORT : int
        {static} - SCHEME : String
        - dnsTxtRecordValues : Map<String, GatewayModulePathType>
        - fqdn : String
        - lookupStatus : LookupStatus
        - running : boolean
        + endpointURLForInterface()
        + getHomeCommunityId()
        + getLookupStatus()
        + isRunning()
        + lookup()
        # answerCallback()
        {abstract} # doResolve()
        # setRunning()
        ~ handleAnswer()
        ~ setLookupStatus()
        - checkTxtVersion()
        - clear()
        - fillDnsTxtRecordValues()
        - fillModuleList()
        - handleRecordsAsStrings()
        - handleTTL()
        - setFqdn()
    }
  }
  

  namespace de.gematik.ti.epa.android.fdv.service.localization {
    class de.gematik.ti.epa.android.fdv.service.localization.GatewayModulePathType {
        - path : String
        - validUntil : Date
        + GatewayModulePathType()
        + getPath()
        + getValidUntil()
    }
  }
  

  namespace de.gematik.ti.epa.android.fdv.service.localization {
    class de.gematik.ti.epa.android.fdv.service.localization.ServiceLocator {
        - abstractServiceLocator : IServiceLocalizer
        + ServiceLocator()
        + endpointURLForInterface()
        + getHomeCommunityId()
        + getLookupStatus()
        + lookup()
    }
  }
  

  namespace de.gematik.ti.epa.android.fdv.service.localization {
    class de.gematik.ti.epa.android.fdv.service.localization.ServiceLocatorV10 {
        + ServiceLocatorV10()
        # doResolve()
        - initializeResolverCallback()
    }
  }
  

  namespace de.gematik.ti.epa.android.fdv.service.localization {
    class de.gematik.ti.epa.android.fdv.service.localization.ServiceLocatorV9 {
        {static} - DEFAULT_TTL : int
        {static} - TAG : String
        - dnssecResolverApi : DnssecResolverApi
        + ServiceLocatorV9()
        # doResolve()
        - getApplicationUsingReflection1()
        - getApplicationUsingReflection2()
    }
  }
  

  de.gematik.ti.epa.android.fdv.service.localization.AbstractServiceLocator .up.|> de.gematik.ti.epa.fdv.service.localization.spi.IServiceLocalizer
  de.gematik.ti.epa.android.fdv.service.localization.ServiceLocator .up.|> de.gematik.ti.epa.fdv.service.localization.spi.IServiceLocalizer
  de.gematik.ti.epa.android.fdv.service.localization.ServiceLocatorV10 .up.|> de.gematik.ti.epa.fdv.service.localization.spi.IServiceLocalizer
  de.gematik.ti.epa.android.fdv.service.localization.ServiceLocatorV10 -up-|> de.gematik.ti.epa.android.fdv.service.localization.AbstractServiceLocator
  de.gematik.ti.epa.android.fdv.service.localization.ServiceLocatorV9 -up-|> de.gematik.ti.epa.android.fdv.service.localization.AbstractServiceLocator









@enduml
